force-app/main/default/objects/Idea/fields/Di_Account__c.field-meta.xml
<CustomField>
    <fullName>Di_Account__c</fullName>
    <defaultValue>$User.Di_Account__c</defaultValue>
    <label>Di Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>