force-app/main/default/objects/Idea/fields/Di_Idea__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Idea #</label>
    <type>AutoNumber</type>
</CustomField>