force-app/main/default/objects/Idea/fields/Di_Idea_Alt_3rd_Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Alt_3rd_Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alt 3rd Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ideas2</relationshipName>
    <type>Lookup</type>
</CustomField>