force-app/main/default/objects/Idea/fields/Di_Idea_Category__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Opening</fullName>
            </value>
            <value>
                <fullName>ACH and Wires</fullName>
            </value>
            <value>
                <fullName>Admin User Support</fullName>
            </value>
            <value>
                <fullName>Alerts &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Branding and Flexibility</fullName>
            </value>
            <value>
                <fullName>Card Management</fullName>
            </value>
            <value>
                <fullName>Check/Deposit Imaging</fullName>
            </value>
            <value>
                <fullName>Client Services Developed Solutions</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Data &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Digital Communication - Chat, Messaging, Chatbot</fullName>
            </value>
            <value>
                <fullName>DI Labs</fullName>
            </value>
            <value>
                <fullName>Entitlements</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>External Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Financial Wellness</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>General Admin Platform</fullName>
            </value>
            <value>
                <fullName>General Business Banking</fullName>
            </value>
            <value>
                <fullName>General Payments</fullName>
            </value>
            <value>
                <fullName>General Retail Banking</fullName>
            </value>
            <value>
                <fullName>Idea Exchange</fullName>
            </value>
            <value>
                <fullName>Industry Research</fullName>
            </value>
            <value>
                <fullName>Interfaces</fullName>
            </value>
            <value>
                <fullName>Internal Transfers</fullName>
            </value>
            <value>
                <fullName>Money Management</fullName>
            </value>
            <value>
                <fullName>Online Forms</fullName>
            </value>
            <value>
                <fullName>Online Statements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>