force-app/main/default/objects/Idea/fields/Di_Idea_Channel__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>