force-app/main/default/objects/Idea/fields/Di_Idea_DI_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_DI_Release_Number__c</fullName>
    <label>DI Release Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>