force-app/main/default/objects/Idea/fields/Di_Idea_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>