force-app/main/default/objects/Idea/fields/Di_Idea_Featured_Flag__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Featured_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Featured Flag</label>
    <type>Checkbox</type>
</CustomField>