force-app/main/default/objects/Idea/fields/Di_Idea_Featured_Image__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Featured_Image__c</fullName>
    <label>Featured Image</label>
    <type>Url</type>
</CustomField>