force-app/main/default/objects/Idea/fields/DI_Idea_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>DI_Idea_Internal_Comments__c</fullName>
    <formula>HYPERLINK(&quot;https://ncr.my.salesforce.com/apex/NCR_ViewInternalComment?id=&quot;+ Id , &quot;Internal Comments&quot;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Comments</label>
    <type>Text</type>
</CustomField>