force-app/main/default/objects/Idea/fields/Di_Idea_Jira_Number__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Jira_Number__c</fullName>
    <label>Jira Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>