force-app/main/default/objects/Idea/fields/Di_Idea_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Consumer Relationship</fullName>
            </value>
            <value>
                <fullName>Money Movement</fullName>
            </value>
            <value>
                <fullName>Platform Solutions</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Theme Idea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>