force-app/main/default/objects/Idea/fields/Di_Idea_No_of_Days_Idea_Age__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_No_of_Days_Idea_Age__c</fullName>
    <formula>Now () - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(# of Days) Idea Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>