force-app/main/default/objects/Idea/fields/Di_Idea_Product_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Product_Manager_Email__c</fullName>
    <label>Product Manager Email</label>
    <type>Email</type>
</CustomField>