force-app/main/default/objects/Idea/fields/Di_Idea_Product_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Product_Manager_Name__c</fullName>
    <label>Product Manager Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaron Oplinger</fullName>
            </value>
            <value>
                <fullName>Alysann Fackler</fullName>
            </value>
            <value>
                <fullName>Aparna Sheth</fullName>
            </value>
            <value>
                <fullName>Barbara Hon</fullName>
            </value>
            <value>
                <fullName>Behrouz Naiem</fullName>
            </value>
            <value>
                <fullName>Bo Bedingfield</fullName>
            </value>
            <value>
                <fullName>Braxton Caswell</fullName>
            </value>
            <value>
                <fullName>Brett Conoly</fullName>
            </value>
            <value>
                <fullName>Brooke Everett</fullName>
            </value>
            <value>
                <fullName>Bryan Link</fullName>
            </value>
            <value>
                <fullName>Calvin Grimes</fullName>
            </value>
            <value>
                <fullName>Carlos Camacho</fullName>
            </value>
            <value>
                <fullName>Chan Glazman</fullName>
            </value>
            <value>
                <fullName>Chris Coussens</fullName>
            </value>
            <value>
                <fullName>Christina Johnson</fullName>
            </value>
            <value>
                <fullName>Christopher Hoffmann</fullName>
            </value>
            <value>
                <fullName>Clay Gross</fullName>
            </value>
            <value>
                <fullName>Craig Heath</fullName>
            </value>
            <value>
                <fullName>Dustin Binns</fullName>
            </value>
            <value>
                <fullName>Erica Pilon</fullName>
            </value>
            <value>
                <fullName>Ethan Cunningham</fullName>
            </value>
            <value>
                <fullName>Heidi Leo</fullName>
            </value>
            <value>
                <fullName>Jay Quint</fullName>
            </value>
            <value>
                <fullName>Jennifer Smay</fullName>
            </value>
            <value>
                <fullName>Jill Capicchioni</fullName>
            </value>
            <value>
                <fullName>Jim Allen</fullName>
            </value>
            <value>
                <fullName>John Doster</fullName>
            </value>
            <value>
                <fullName>Judy Shieh</fullName>
            </value>
            <value>
                <fullName>Kyle King</fullName>
            </value>
            <value>
                <fullName>Lauren Westberg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>