force-app/main/default/objects/Idea/fields/DI_Idea_Theme_Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>DI_Idea_Theme_Co_Owner__c</fullName>
    <label>Idea Theme Co-Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>