force-app/main/default/objects/Idea/fields/DI_Idea_Theme_Status__c.field-meta.xml
<CustomField>
    <fullName>DI_Idea_Theme_Status__c</fullName>
    <label>Idea Theme Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>