force-app/main/default/objects/Idea/fields/Di_Internal_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Di_Internal_Category_Name__c</fullName>
    <label>Internal Category Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Opening</fullName>
            </value>
            <value>
                <fullName>ACH and Wires</fullName>
            </value>
            <value>
                <fullName>Admin User Support</fullName>
            </value>
            <value>
                <fullName>Alerts &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Branding and Flexibility</fullName>
            </value>
            <value>
                <fullName>Business Banking Alerts</fullName>
            </value>
            <value>
                <fullName>Business Banking Customer Support</fullName>
            </value>
            <value>
                <fullName>Business Banking Remote Deposit</fullName>
            </value>
            <value>
                <fullName>Business Banking Reporting</fullName>
            </value>
            <value>
                <fullName>Business Banking Third Party Product Integration</fullName>
            </value>
            <value>
                <fullName>Card Management</fullName>
            </value>
            <value>
                <fullName>Check/Deposit Imaging</fullName>
            </value>
            <value>
                <fullName>Client Services Developed Solutions</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Data &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Digital Communication - Chat, Messaging, Chatbot</fullName>
            </value>
            <value>
                <fullName>DI labs</fullName>
            </value>
            <value>
                <fullName>Entitlements</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Financial Wellness</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Funds Transfer</fullName>
            </value>
            <value>
                <fullName>General Admin Platform</fullName>
            </value>
            <value>
                <fullName>General Business Banking</fullName>
            </value>
            <value>
                <fullName>General Payments</fullName>
            </value>
            <value>
                <fullName>Idea Exchange</fullName>
            </value>
            <value>
                <fullName>Industry Research</fullName>
            </value>
            <value>
                <fullName>Interfaces DPV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>