force-app/main/default/objects/Idea/fields/Fi_Domain__c.field-meta.xml
<CustomField>
    <fullName>Fi_Domain__c</fullName>
    <defaultValue>$User.DI_Fi_Domain__c</defaultValue>
    <label>Fi Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>