force-app/main/default/objects/Idea/fields/FI_Name__c.field-meta.xml
<CustomField>
    <fullName>FI_Name__c</fullName>
    <defaultValue>$User.DI_Fi_Name__c</defaultValue>
    <label>FI Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>