force-app/main/default/objects/Idea/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <formula>HYPERLINK(&quot;https://ncr--c.na64.visual.force.com/apex/IdeaHistory?id=&quot;+ Id , &quot;Idea History&quot;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History</label>
    <type>Text</type>
</CustomField>