force-app/main/default/objects/Idea/recordTypes/InternalIdeasIdeaRecordType.recordType-meta.xml
<RecordType>
    <fullName>InternalIdeasIdeaRecordType</fullName>
    <active>true</active>
    <description>Record Type used to associate ideas with a specific community</description>
    <label>IdeaExchange: Idea Record Type</label>
</RecordType>