force-app/main/default/objects/Idea/recordTypes/PortalIdeasIdeaRecordType.recordType-meta.xml
<RecordType>
    <fullName>PortalIdeasIdeaRecordType</fullName>
    <active>true</active>
    <description>Record Type used to associate ideas with a specific community</description>
    <label>Portal Ideas: Idea Record Type</label>
</RecordType>