force-app/main/default/objects/Idea/recordTypes/Record_type_for_community_09a70000000CrI8AAK_entity_Idea.recordType-meta.xml
<RecordType>
    <fullName>Record_type_for_community_09a70000000CrI8AAK_entity_Idea</fullName>
    <active>true</active>
    <description>Record type used to associate Idea with a specific community</description>
    <label>NetKey: Idea Record Type</label>
</RecordType>